--- a/css/3columnstyle.css
+++ b/css/3columnstyle.css
@@ -63,6 +63,7 @@ p {
     text-align: center;
     display: inline-block;
     margin-top: 2em;
+    transition: 0.60s;
 }
 
 .firstbtn {
@@ -82,6 +83,7 @@ p {
     border: solid 2px hsl(0, 0%, 95%);
     color: hsla(0, 0%, 100%, 0.75);
     background-color: transparent;
+    transition: 0.60s;
 }
 
 
