--- a/css/3columnstyle.css
+++ b/css/3columnstyle.css
@@ -134,23 +134,27 @@ p {
     p {
         line-height: 2;
     }
-    .container {
+    .main {
+        display: flex;
         margin: 0 auto;
         width: 100vw;
-        height: 100vh;
+        /* height: 100vh; */
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 1.5em 0;
     }
     .inside-container {
-        margin: 0 auto;
-        /* max-width: 70%; */
-        height: 90vh;
-        padding: 2em 0;
+        margin: 50px auto;
+        padding-top: 2em;
+        /* padding-bottom: 2.5em; */
         display: flex;
         justify-content: center;
         align-items: center;
     }
     .row {
         max-width: 830px;
-        max-height: 520px;
+        /* max-height: 520px; */
         display: flex;
     }
     .para {
