--- a/css/3columnstyle.css
+++ b/css/3columnstyle.css
@@ -26,6 +26,15 @@ a {
     text-decoration: none;
 }
 
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
 
 /* Typography */
 
